      (Closes: #582958)
    + Add download compression ordering support to prefer xz over gz.
      (Closes: #763071)
    + Add generalized search regex with some special strings @PACKAGE@,
      @ANY_VERSION@, @ARCHIVE_EXT@, and @SIGNATURE_EXT@.
      (Closes: #517637, #539780)
    + Add direct git repository support. (Closes: #663357)
  * uupdate:
    + Prevent failure when upstream version is 0.  (Closes: #798175)
    + Work around missing debian.tar.gz for "3.0 (quilt)".  (Closes: 798133)
    + Add multiple upstream tarball support and resolve minor bugs by using
      dpkg-source as the backend.  (Closes: #278797, #544638, #570221, 
      #752364, #797045)
  * mk-origtargz:
    + Support component name for the multiple upstream tarball support.
    + Fix Files-Excluded for duplicate entries. (Closes: #762263)
  * debian/control
    + Add gnupg2/gpgv2 as alternative option to gnupg/gpgv.  (Closes: #788414)

  [ James McCoy ]
  * debuild:
    + Use _all as the .changes arch for -A builds.  (Closes: #806262)

  [ Daniel Kahn Gillmor ]
  * debuild:
    + pass through DBUS_SESSION_BUS_ADDRESS so that gpg-agent can make
      pinentry-gnome3 work (Closes: #805501)

 -- Osamu Aoki <osamu@debian.org>  Wed, 07 Oct 2015 21:46:20 +0900

devscripts (2.15.9) unstable; urgency=medium

  [ Joachim Breitner ]
  * mk-origtargz:
    + Work around tar --delete not working unless piping. This should
      make the support for Excluded-Files more reliable.
      Thanks to Felix Natter for identifying the problem and solution.
  * debcommit:
    + Detect git repositories even if .git is a file instead of a directory,
      as it can be the case with "git worktree" worktrees.
  * origtargz: Call rm -rf with "--", so that files starting with - are not
    considered arguments by rm.

  [ James McCoy ]
  * bts:
    + Add reference to pts-subscribe(1) in bts(1).  (Closes: #794689)
  * tagpending:
    + Fix warning when there are no fixed bugs in the changelog.  (Closes:
      #795470)